fixed transfers dropdown being clipped by the terminal - fixes #4688

--- a/tabby-core/src/components/transfersMenu.component.scss
+++ b/tabby-core/src/components/transfersMenu.component.scss
@@ -51,3 +51,7 @@
 button {
     flex: none;
 }
+
+svg {
+    height: 14px;
+}
